--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "chrome",
             "request": "launch",
             "name": "Запустить Chrome для localhost",
-             "url": "D:/git/shtolce.github.io/index.html",
+            //"url": "D:/git/HtmlTest/PhaserMase2d/index.html",
+            "url": "D:/git/HtmlTest/PhaserMase2d/index.html",
             "webRoot": "${workspaceFolder}",
             "runtimeArgs":[
                 "--disable-web-security"]
